kubernetes/apps/media/sonarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
      url: "http://sonarr.media.svc.cluster.local/ping"
      conditions:
        - "[STATUS] == 200"
        - "[BODY].status == OK"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Sonarr
    gethomepage.dev/icon: sonarr.png
    gethomepage.dev/href: https://sonarr.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=sonarr
    gethomepage.dev/widget.type: sonarr
    gethomepage.dev/widget.url: http://sonarr.media.svc.cluster.local
    gethomepage.dev/widget.key: fa55068cef2e4104914cc4b27a03df0d
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - sonarr.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oidc-auth
      backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 80
          weight: 1
